--- a/public/index.html
+++ b/public/index.html
@@ -5,10 +5,7 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
+    <meta name="description" content="Discover your most played Spotify tracks and artists, and save them directly into a playlist!"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
    
     <title>SpotTop - Your Top Spotify Tracks & Artists</title>
