--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,16 @@
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="Discover your most played Spotify tracks and artists, and save them directly into a playlist!"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+
+    <meta property="og:title" content="SpotTop - Discover your top Spotify Tracks & Artists">
+    <meta property="og:site_name" content="SpotTop">
+    <meta property="og:url" content="https://spottop.co.uk">
+    <meta property="og:description" content="Discover your most played Spotify tracks and artists, and save them straight into a playlist.">
+    <meta property="og:type" content="website">
+    <meta property="og:image" content="https://spottop.co.uk/opengraph.jpg">
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="630" />
+    <meta name="twitter:card" content="summary_large_image" />
    
     <title>SpotTop - Your Top Spotify Tracks & Artists</title>
   </head>
