--- a/public/index.html
+++ b/public/index.html
@@ -13,11 +13,11 @@
     <meta property="og:url" content="https://spottop.co.uk">
     <meta property="og:description" content="Discover your most played Spotify tracks and artists, and save them straight into a playlist.">
     <meta property="og:type" content="website">
-    <meta property="og:image" content="https://spottop.co.uk/opengraph.jpg">
+    <meta property="og:image" content="https://spottop.co.uk/opengraph.png">
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:image" content="https://spottop.co.uk/opengraph.jpg" />
+    <meta name="twitter:image" content="https://spottop.co.uk/opengraph.png" />
    
     <title>SpotTop - Your Top Spotify Tracks & Artists</title>
   </head>
