--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     <meta property="og:image" content="https://spottop.co.uk/opengraph.png">
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="630" />
-    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:image" content="https://spottop.co.uk/opengraph.png" />
    
     <title>SpotTop - Your Top Spotify Tracks & Artists</title>
